src/test/ui/bind-by-move/bind-by-move-no-guards.stderr
error[E0008]: cannot bind by-move into a pattern guard
  --> $DIR/bind-by-move-no-guards.rs:18:14
   |
LL |         Some(z) if z.recv().unwrap() => { panic!() },
   |              ^ moves value into pattern guard

error: aborting due to previous error

For more information about this error, try `rustc --explain E0008`.
